2008-05-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/RequestGroup.cc
	(RequestGroup::createInitialCommand): Use empty() instead of size().

2008-05-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* Release 0.13.2

2008-05-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated fr.po(thanks to Sebastien) and ja.po. ThanksDone make update-po
	* po/fr.po
	* po/ja.po
	* po/aria2c.pot
	* po/*.po
	* po/*.gmo

2008-05-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.13.2
	* src/configure.ac

2008-05-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Refactord.
	* src/RequestGroupMan.cc
	(removeStoppedGroup)
	(fillRequestGroupFromReserver)

2008-05-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error on Ubuntu.
	* src/BtPieceMessage.cc
	* src/MessageDigestHelper.cc
	* src/Util.cc

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error when configured with --disable-bittorrent
	* test/DownloadHandlerFactoryTest.cc
	
2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Done make update-po
	* po/aria2c.pot
	* po/*.po
	* po/*.gmo

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.13.2rc.
	* src/configure.ac
	
2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made option name bold. Updated SYNOPSIS to make it more readable.
	* doc/aria2c.1.txt
	* doc/aria2c.1
	* doc/aria2c.1.html
	* src/version_usage.cc

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Refactored. Use std::string instead of size and char*.
	* Data.cc
	* Data.h
	* test/Data.cc

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added trimSelf(). Rewritten trim() to use trimSelf().
	* Util.cc
	* Util.h

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/ChunkChecksum.h (getChecksum): Return const reference.
