@@ -80,32 +80,32 @@ public:
 
   virtual std::deque<std::pair<std::string, uint16_t> >& getNodes() = 0;
 
-  static const std::string NAME;
+  static const std::string C_NAME;
 
-  static const std::string FILES;
+  static const std::string C_FILES;
 
-  static const std::string LENGTH;
+  static const std::string C_LENGTH;
 
-  static const std::string PATH;
+  static const std::string C_PATH;
 
-  static const std::string INFO;
+  static const std::string C_INFO;
 
-  static const std::string PIECES;
+  static const std::string C_PIECES;
 
-  static const std::string PIECE_LENGTH;
+  static const std::string C_PIECE_LENGTH;
 
-  static const std::string PRIVATE;
+  static const std::string C_PRIVATE;
 
   // This is just a string "1". Used as a value of "private" flag.
-  static const std::string PRIVATE_ON;
+  static const std::string C_PRIVATE_ON;
 
-  static const std::string URL_LIST;
+  static const std::string C_URL_LIST;
 
-  static const std::string ANNOUNCE;
+  static const std::string C_ANNOUNCE;
 
-  static const std::string ANNOUNCE_LIST;
+  static const std::string C_ANNOUNCE_LIST;
 
-  static const std::string NODES;
+  static const std::string C_NODES;
 
 };
 
