@@ -1,5 +1,17 @@
 2008-05-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Fixed compile error on Mac OS X 10.3.9. This error was caused by the
+	name collision of static variable and predefined macro.
+	* src/BtContext.cc
+	* src/BtContext.h
+	* src/CookieBoxFactory.cc
+	* src/CookieBoxFactory.h
+	* src/CookieParser.cc
+	* src/CookieParser.h
+	* src/DefaultBtContext.cc
+	
+2008-05-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	* src/RequestGroup.cc
 	(RequestGroup::createInitialCommand): Use empty() instead of size().
 
